--- a/src/styles/index.module.sass
+++ b/src/styles/index.module.sass
@@ -21,7 +21,7 @@
     padding: 1rem
     margin: 0 auto
     display: block
-    text-align: left
+    text-align: center
 
 .chapter
     width: var(--width-container)
